k8s/config/humidity-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humidity-microservice
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: humidity-microservice
  template:
    metadata:
      labels:
        app: humidity-microservice
    spec:
      containers:
        - name: humidity-microservice
          image: humidity-microservice:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8090
          volumeMounts:
            - name: readings-volume
              mountPath: /app/data/readings.csv
              subPath: readings.csv
              readOnly: true
      volumes:
        - name: readings-volume
          configMap:
            name: readings

---
apiVersion: v1
kind: Service
metadata:
  name: humidity-microservice
spec:
  selector:
    app: humidity-microservice
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
  type: ClusterIP
