k8s/config/temperature-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temperature-microservice
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temperature-microservice
  template:
    metadata:
      labels:
        app: temperature-microservice
    spec:
      containers:
      - name: temperature-microservice
        image: temperature-microservice:0.0.1-SNAPSHOT
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: readings-volume
            mountPath: /app/data/readings.csv
            subPath: readings.csv
            readOnly: true
      volumes:
        - name: readings-volume
          configMap:
            name: readings
            

---
apiVersion: v1
kind: Service
metadata:
  name: temperature-microservice
spec:
  selector:
    app: temperature-microservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
