k8s/config/aggregator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator-microservice
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aggregator-microservice
  template:
    metadata:
      labels:
        app: aggregator-microservice
    spec:
      containers:
        - name: aggregator-microservice
          image: aggregator-microservice:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8010
          volumeMounts:
            - name: app-properties
              mountPath: /app/properties/application.properties
              subPath: application.properties
              readOnly: true
      volumes:
        - name: app-properties
          configMap:
            name: application-properties
---
apiVersion: v1
kind: Service
metadata:
  name: aggregator-app-service
spec:
  selector:
    app: aggregator-microservice
  ports:
    - protocol: TCP
      port: 81
      targetPort: 8010
  type: LoadBalancer
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aggregator-app-gateway
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: aggregator-app-service
          kind: Service
          port: 8010
